# MMCivic

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix  report.typ
.forgejo/workflows/: test.yml
scripts/: dist.sh
src/: bytevec.c  bytevec.h  main.c  main.ccn  user_types.h  util.c  util.h
src/checktypes/: trav_typecheckdecl.c  trav_typecheckexpr.c
src/cleanup/: trav_freesymtables.c
src/codegen/: state.c  state.h  trav_boolcasts.c  trav_codegen.c  trav_for2while.c  trav_indexlocals.c
src/ctxanalysis/: arrayinitgen.c  arrayinitgen.h  symtable.c  symtable.h  symtablemangling.c  trav_checkarrdims.c  trav_checkidentifiers.c  trav_extractindices.c  trav_initglobalvars.c  trav_initlocalvars.c  trav_initsymtables.c  trav_reducearrays.c  trav_typecheck.c  unionfindsolver.c  unionfindsolver.h
src/demo/: count_operators.c  rename_identifiers.c  sum_ints.c  trav_checkzero.c
src/dimension_reduction/: dimreduce.c  dimreduce.h  trav_paramdims.c
src/global/: globals.c  globals.h
src/loop_name_mangling/: trav_mangleforloopnames.c
src/optimize/: opt_sub.c  strength_reduction.c  super_strength_reduction.c
src/parse_cleanup/: trav_reverseparams.c
src/primary_name_mangling/: trav_mangleforloopnames.c  trav_manglefuncvar.c
src/print/: count_identifiers.c  print.c
src/scanparse/: lexer.l  lexer_util.c  lexer_util.h  parser.y
test/: array.cvc  codegen.cvc  core.cvc  coreio.cvc  ctxanalysis_initglobals.cvc  ctxanalysis_types.cvc  fib.cvc  primary_name_mangling_mangle_for_loops.cvc  primary_name_mangling_mangle_funcvar.cvc  single_line_blocks.cvc  test1.cvc  test3.cvc  testgrammar.cvc  testsuite_sandbox.cvc  testsymtables.cvc  types.cvc
testsuite/: civic.h
testsuite/basic/functional/: typecheck.cvc
